tests/snapshots/shims_test__creates_global_shims.snap
---
source: tests/shims_test.rs
expression: "std::fs::read_to_string(sandbox.path().join(\".proto/bin\").join(if cfg!(windows)\n                    {\n                    format!(\"{}.cmd\", \"schema-test\")\n                } else { \"schema-test\".to_string() })).unwrap()"
---
#!/usr/bin/env bash
set -e
[ -n "$PROTO_DEBUG" ] && set -x



exec proto run schema-test --  "$@" 


